# news

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CNAME  DESIGN_PHILOSOPHY.md  FEATURE_MAPPING.md  FUNCTIONEEL_TECHNISCH_ONTWERP.md  MMM_APP_OVERDRACHTSDOCUMENT.md  MMM_HANDLEIDING_DATA_ANALIST.md  MMM_README.md  PLANNING_2026_EPICS.md  PRODUCTPLAN_2026.md  PRODUCT_DOCUMENTATIE.md  README.md  SECURITY_AUDIT.md  SIMPLIFICATION_PLAN.md  STRATEGIE.md  UI_CONSISTENCY_AUDIT.md  app.js  hoofdstuk_1.docx  hoofdstuk_1.md  hoofdstuk_2.docx  hoofdstuk_2.md  hoofdstuk_3.docx  hoofdstuk_3.md  hoofdstuk_4.md  hoofdstuk_5_tm_46.md  index.html  inhoudsopgaven.md  middleware.ts  next.config.mjs  package-lock.json  package.json  requirements.txt  run.py  sentry.client.config.ts  style.css  tailwind.config.ts  trouwwebsite-roadmap.md  (+3 more)
app/: apple-icon.tsx  error.tsx  fonts.ts  global-error.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  not-found.tsx  page.tsx
backend/: app.py  config.py  database.py  gemini_client.py  researcher.py  scheduler.py  storage.py  summarizer.py
bier/: index.html
components/: ActivityBar.tsx  AgentCard.tsx  AgentIcon.tsx  AgentInfoModal.tsx  AnalysisView.tsx  AuthHeader.tsx  BrandLogo.tsx  BusinessContextPanel.tsx  ChatDock.tsx  ChatPanel.tsx  ChatScreen.tsx  ClientProfileForm.tsx  ClientProfilePicker.tsx  (+37 more)
mmm/worker/: DEPLOY.md  README.md  pyproject.toml
mmm/worker/mmm_worker/: jobspec.py  modal_app.py  ports.py  prepare.py  runner.py  supabase_backends.py
mmm/worker/tests/: fakes.py  test_jobspec.py  test_prepare.py  test_runner.py
(+907 files in other folders)
